fixed spacing units and padding

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -17,6 +17,7 @@ nav ul {
 	list-style: none;
 	margin: 0;
 	padding-left: 0;
+  padding-top: 50px;
 }
 
 nav li {
@@ -24,7 +25,7 @@ nav li {
   background: #efe88e;
 	display: block;
 	float: left;
-	padding: 1rem;
+	padding: 1em;
 	position: relative;
 	text-decoration: none;
   transition-duration: 0.5s;
@@ -43,10 +44,10 @@ nav ul li ul {
 	background: orange;
 	visibility: hidden;
   opacity: 0;
-  min-width: 5rem;
+  min-width: 5em;
 	position: absolute;
   transition: all 0.5s ease;
-  margin-top: 1rem;
+  margin-top: 1em;
 	left: 0;
   display: none;
 }
@@ -54,7 +55,7 @@ nav ul li ul {
 nav ul li:hover > ul,
 ul li ul:hover {
   visibility: visible;
-  opacity: 1;
+  opacity: .8;
   display: block;
 }
 
